manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: myapp 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp 
    spec:
      containers:
        - name: myapp 
          image: cepgstapacr.azurecr.io/myapp-82023145
          ports:
          - containerPort: 8080
